--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,12 @@ classifiers = [
 [project.urls]
 Homepage = "https://oem.flir.com/support/support-center/software/"
 
+[project.scripts]
+flir-get-info = "BosonSDK.flir_get_info:main"
+flir-mipi = "BosonSDK.flir_mipi:main"
+
 [tool.setuptools]
 packages = ["BosonSDK", "BosonSDK.ClientFiles_Python", "BosonSDK.CommunicationFiles"]
-
-[tool.setuptools.package-data]
-"BosonSDK" = ["__init__.py", "_version.py", "LICENSE.txt", "SDK_README.txt", "VERSION"]
 
 # [tool.setuptools_scm]
 # write_to = "BosonSDK/_version.py"
