first working module. Added delays for certain commands

--- a/flir_boson_v4l2/Makefile
+++ b/flir_boson_v4l2/Makefile
@@ -1,14 +1,14 @@
 # SPDX-License-Identifier: GPL-2.0
 
 # Out-of-tree module build support
-flir-boson-objs := flir-boson-core.o flir-boson-fslp.o Client_Dispatcher.o I2C_Connector.o
+flir-boson-objs := flir-boson-core.o flir-boson-fslp.o
 obj-m += flir-boson.o
 
 EXTRA_CFLAGS += -DDEBUG
 
 # In-tree kernel build support
 obj-$(CONFIG_VIDEO_FLIR_BOSON) += flir-boson.o
-flir-boson-y := flir-boson-core.o flir-boson-fslp.o Client_Dispatcher.o I2C_Connector.o
+flir-boson-y := flir-boson-core.o flir-boson-fslp.o
 
 # Build configuration
 KERNEL_VERSION ?= $(shell uname -r)
