update kernel module makefile

--- a/flir_boson_vvcam/Makefile
+++ b/flir_boson_vvcam/Makefile
@@ -1,14 +1,14 @@
 # SPDX-License-Identifier: GPL-2.0
 
 # Out-of-tree module build support
-flir-boson-objs := flir-boson-core.o flir-boson-fslp.o
-obj-m += flir-boson.o
+flir-boson-vvcam-objs := flir-boson-core.o flir-boson-fslp.o
+obj-m += flir-boson-vvcam.o
 
 # EXTRA_CFLAGS += -DDEBUG
 
 # In-tree kernel build support
-obj-$(CONFIG_VIDEO_FLIR_BOSON) += flir-boson.o
-flir-boson-y := flir-boson-core.o flir-boson-fslp.o
+obj-$(CONFIG_VIDEO_FLIR_BOSON_VVCAM) += flir-boson-vvcam.o
+flir-boson-vvcam-y := flir-boson-core.o flir-boson-fslp.o
 
 # Build configuration
 KERNEL_VERSION ?= $(shell uname -r)
@@ -26,9 +26,9 @@ clean:
 all: default
 
 install: all
-	-rmmod -f flir_boson
+	-rmmod -f flir_boson_vvcam
 	-rmmod -f imx8_media_dev
-	insmod flir-boson.ko
+	insmod flir-boson-vvcam.ko
 	modprobe imx8_media_dev
 
 .PHONY: default hardware hw modules_install clean all install
