--- a/flir_boson_v4l2/Kconfig
+++ b/flir_boson_v4l2/Kconfig
@@ -1,4 +1,4 @@
-# SPDX-License-Identifier: GPL-2.0-only
+# SPDX-License-Identifier: MIT
 
 config VIDEO_FLIR_BOSON
 	tristate "FLIR Boson+ MIPI Camera support"
